--- a/my-app/package.json
+++ b/my-app/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@clerk/clerk-react": "^5.8.2",
     "convex": "^1.16.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
