--- a/my-app/package.json
+++ b/my-app/package.json
@@ -13,7 +13,8 @@
     "@clerk/clerk-react": "^5.8.2",
     "convex": "^1.16.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^6.26.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
